# prospector-zmk-module

./: CMakeLists.txt  Kconfig  LICENSE  README.md
boards/shields/prospector_adapter/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  prospector_adapter.conf
boards/shields/prospector_adapter/boards/: seeeduino_xiao_ble.overlay
boards/shields/prospector_adapter/include/: fonts.h  sf_symbols.h
boards/shields/prospector_adapter/src/: als.c  brightness.c  custom_status_screen.c  display_rotate_init.c
boards/shields/prospector_adapter/src/fonts/: FRAC_Bold_48.c  FRAC_ExtraBold_48.c  FRAC_Light_48.c  FRAC_Medium_48.c  FRAC_Regular_32.c  FRAC_Regular_40.c  FRAC_Regular_48.c  FRAC_Thin_32.c  FRAC_Thin_40.c  FRAC_Thin_48.c  FoundryGridnikLight_48.c  FoundryGridnikLight_56.c  FoundryGridnikMedium_16.c  FoundryGridnikMedium_20.c  FoundryGridnikRegular_28.c  FoundryGridnikRegular_48.c  FoundryGridnikRegular_56.c  IBMPlexMono_Medium_24.c  IBMPlexMono_SemiBold_28.c  IBMPlexSans_Bold_56.c  IBMPlexSans_Medium_24.c  IBMPlexSans_SemiBold_28.c  IBMPlexSans_Thin_56.c  InterDisplay_Bold_40.c  InterDisplay_Bold_56.c  InterDisplay_Light_40.c  InterDisplay_SemiBold_20.c  InterDisplay_SemiBold_28.c  InterDisplay_SemiBold_40.c  InterDisplay_Thin_56.c  PPSupplySans_Light_64.c  PPSupplySans_Thin_64.c  SF_Compact_Text_Bold_32.c  SF_Compact_Text_Light_24.c  SF_Compact_Text_Medium_24.c  SF_Compact_Text_Regular_20.c  SF_Compact_Text_Semibold_28.c  SF_Compact_Text_Semibold_32.c  sf_compact_rounded_bold_24.c  (+1 more)
drivers/display/: display_st7789v.c
include/zmk/events/: caps_word_state_changed.h
lvgl/: CMakeLists.txt  lvgl.c
modules/lvgl/: CMakeLists.txt
src/behaviors/: behavior_caps_word.c
src/split/bluetooth/: central.c  central_status_changed_observer.c
zephyr/: module.yml
(+6 files in other folders)
